fix: target directory discovery
Prior to this commit, cargo-aoc assumes the target directory is in the
crate root directory. However, this isn't necessarily the case.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,11 @@ members = [
     "aoc-runner",
     "aoc-runner-derive",
     "aoc-runner-internal",
-    "cargo-aoc"
+    "cargo-aoc",
 ]
-exclude = [
-    "examples",
-]
+exclude = ["examples"]
 resolver = "2"
+
+
+[patch.crates-io]
+aoc-runner-internal = { path = "aoc-runner-internal" }
